--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<html>
+  <body>
+    <h1> Hockey </h1>
+    <h3> Hockey is a diverse sport </h3>
+    <p> In terms of international diversity Hockey can be viewed as diverse. Hockey is a sport which can be picked up and played 
+      anywhere in the world. </p>
+    <h3> Facts </h3>
+    <p> In 2016 it was reported the amount of Canadian players, only in the NHL, had deminissed to 43%. Furthermore, it's estimated 35% of
+    the sport is built of international players, more diverse than anyother sport in the United States or Canada.</p>
+    <h3> Misconception </h3>
+    <p> The common misconception throughout time has been Hockey is strictly Canadian because they make up all the Hockey players in the
+    world, and if not Canadian then American.</p>
+    <h3> Truth of the matter </h3>
+    <p> As it has been shown Hockey, for example the NHL, is built up of a diverse group of people. Therefore, it's discouraging to 
+    anyone who wishes to play the sport because they would be seen as an outlier. No one would wish to participate in a sport if they
+    didn't belong and would rediculed for it. </p>
+  </body>
+</html>
