--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+   <link href="style.css" type="text/css" rel="stylesheet" />
   <body>
     <h1> Hockey </h1>
     <h3> Hockey is a diverse sport </h3>
